--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1.0, user-scalable=no"/>
-    <title>李先生&余小姐</title>
+    <title>2018狗年烟花盛宴</title>
     <style>
         * {
             margin: 0;
@@ -93,6 +93,7 @@
         .off {
             background-image: url('./img/off.png');
         }
+
     </style>
 </head>
 <body>
